Created Kermit Plugins Part. Closes #18  * Plugins to Control Server  * Plugins for Puppet. Closes #20 Updated jQuery to 1.8.2 and jQueryUI to 1.9.1 Refactored Server Details Page Menu (now completely Dynamic) Added injection into widget framework to add a new widget without scanning

--- a/static/css/kermit/kermit-skin-default.css
+++ b/static/css/kermit/kermit-skin-default.css
@@ -2001,11 +2001,9 @@ fieldset.infohighlight {
 .opbutton {
 	cursor:pointer;
 	padding-left: 2px;
+	padding-right: 4px;
 	width: 18px;
-}
-
-.opbutton:hover {
-	width: 20px;
+	vertical-align: middle;
 }
 
 .toolbar-group {
