--- a/templates/theme/kermit/base.html
+++ b/templates/theme/kermit/base.html
@@ -14,7 +14,7 @@
 		<link href="{{STATIC_URL}}css/kermit/base.css" rel="stylesheet" type="text/css" />
 		<link href="{{STATIC_URL}}css/kermit/jquery-ui-grappelli-extensions.css" rel="stylesheet" type="text/css" />
 		<link href="{{STATIC_URL}}css/kermit/loader.css" rel="stylesheet" type="text/css" />
-		<link href="{{STATIC_URL}}css/kermit/jquery-ui-1.8.15.custom.css" rel="stylesheet" type="text/css" />	 
+		<link href="{{STATIC_URL}}css/kermit/jquery-ui-1.9.1.custom.min.css" rel="stylesheet" type="text/css" />	 
 		
 		<!-- DynaTree -->
 		<link href="{{STATIC_URL}}css/dynatree/kermit/ui.dynatree.css" rel="stylesheet" type="text/css">
@@ -36,12 +36,15 @@
 		<!-- Collapsible Panel-->
 		<link href="{{STATIC_URL}}css/jquery-collapsible-panel/diQuery-collapsiblePanel.css" rel="Stylesheet" type="text/css" />
 		
+		<!-- CSS3 Menu -->
+		<link href="{{STATIC_URL}}css/css3-menu/style.css" rel="Stylesheet" type="text/css" />
+		
 		<link href="{{STATIC_URL}}css/kermit/kermit-skin-default.css" rel="stylesheet" type="text/css" />
 		{% endblock %} <!-- EXTRASTYLES -->
 		{% block extrastyle %}{% endblock %} <!-- JAVASCRIPTS -->
 		{% block javascripts %} 
-		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.6.2.min.js"></script>
-		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-1.8.15.custom.min.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.8.2.min.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-1.9.1.custom.min.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-hotkeys/jquery.hotkeys.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-form/jquery.form.js"></script>
 		<!-- DynaTree-->
@@ -61,7 +64,6 @@
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-datatable/jquery.dataTable.dateSorting.js"></script>
 		<!-- JQuery TinySort-->
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-tinysort/jquery.tinysort.min.js"></script>
-		
 		
 		<!-- Kermit Scripts-->
 		<script type="text/javascript" src="{{STATIC_URL}}js/kermit/kermit.js"></script>
