--- a/templates/theme/webui/base.html
+++ b/templates/theme/webui/base.html
@@ -14,9 +14,9 @@
 		<link rel="stylesheet" type="text/css" media="screen" href="{{STATIC_URL}}css/menu.css"/>
 		<link rel="icon" type="image/png" href="{{STATIC_URL}}images/favicon.png"/>
 		<link rel="apple-touch-icon" href="{{STATIC_URL}}images/favicon.png"/>
-		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.6.2.min.js"></script>
-		<link type="text/css" href="{{STATIC_URL}}css/jquery-ui-1.8.15.custom.css" rel="stylesheet" />
-		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-1.8.15.custom.min.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.8.2.min.js"></script>
+		<link type="text/css" href="{{STATIC_URL}}css/jquery-ui-1.9.1.custom.min.css" rel="stylesheet" />
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-1.9.1.custom.min.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-hotkeys/jquery.hotkeys.js"></script>
 		<!-- DynaTree-->
 		<link href="{{STATIC_URL}}css/dynatree/kermit/ui.dynatree.css" rel="stylesheet" type="text/css">
