--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -29,9 +29,9 @@
 <!-- Extra Heads -->
 {% block extrahead %}
 {{ block.super }}
-<script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.6.2.min.js"></script>
-<link type="text/css" href="{{STATIC_URL}}css/kermit/jquery-ui-1.8.15.custom.css" rel="stylesheet" />
-<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-1.8.15.custom.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.8.2.min.js"></script>
+<link type="text/css" href="{{STATIC_URL}}css/kermit/jquery-ui-1.9.1.custom.min.css" rel="stylesheet" />
+<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-1.9.1.custom.min.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/jquery-hotkeys/jquery.hotkeys.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/jstree/jquery.jstree.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/jquery-cookie/jquery.cookie.js"></script>
