--- a/templates/server/edit.html
+++ b/templates/server/edit.html
@@ -13,19 +13,18 @@
 <div id="execution-dialog"></div>
 <div id="toolbar-response"></div>
 <div class="fg-toolbar">
-	<div class="toolbar-group">
-				<div class="toolbar-group-title">{{group_name}}</div>
-				<a href="{% url editserver hostname%}"><img class="opbutton" src="{{STATIC_URL}}/images/toolbar/server_edit.png" width="32px"/></a>
-	</div>
 	{% if server_operations %}	
+		<ul id="nav">
 		{%for group_name, operations in server_operations.items %}
-			<div class="toolbar-group">
-				<div class="toolbar-group-title">{{group_name}}</div>
+  			<li><a>{{group_name}}</a>
+    			<ul>
 				{% for current_op in operations %}
-					<img class="opbutton" onclick="checkExecution('{{settings.BASE_URL}}', '{{current_op.hasparameters}}', '{{current_op.agent}}', '{{current_op.action}}', '{{current_op.filter}}');" src="{{static_url}}/images/toolbar/{{current_op.img}}" title="{{current_op.name}}">
+					<li><a onclick="checkExecution('{{settings.BASE_URL}}', '{{current_op.ismco}}', '{{current_op.hasparameters}}', '{{current_op.agent}}', '{{current_op.action}}', '{{current_op.filter}}', '{{current_op.url}}');"><img class="opbutton" src="{{static_url}}/images/toolbar/{{current_op.img}}">{{current_op.name}}</a></li>
 				{% endfor %}
-			</div>
+				</ul>
+			</li>
 		{%endfor%}
+		</ul>
 	{% endif %}
 </div>
 
