--- a/templates/theme/kermit/base.html
+++ b/templates/theme/kermit/base.html
@@ -43,7 +43,7 @@
 		{% endblock %} <!-- EXTRASTYLES -->
 		{% block extrastyle %}{% endblock %} <!-- JAVASCRIPTS -->
 		{% block javascripts %} 
-		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.8.2.min.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery.min.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-1.9.1.custom.min.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-hotkeys/jquery.hotkeys.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-form/jquery.form.js"></script>
