--- a/templates/theme/webui/base.html
+++ b/templates/theme/webui/base.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" type="text/css" media="screen" href="{{STATIC_URL}}css/menu.css"/>
 		<link rel="icon" type="image/png" href="{{STATIC_URL}}images/favicon.png"/>
 		<link rel="apple-touch-icon" href="{{STATIC_URL}}images/favicon.png"/>
-		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.8.2.min.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery.min.js"></script>
 		<link type="text/css" href="{{STATIC_URL}}css/jquery-ui-1.9.1.custom.min.css" rel="stylesheet" />
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-1.9.1.custom.min.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-hotkeys/jquery.hotkeys.js"></script>
