--- a/templates/upload/form.html
+++ b/templates/upload/form.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/jquery.min.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-1.9.1.custom.min.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/kermit/kermit.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/fileuploader/fileuploader.js" ></script>
