Updated message in modal form

--- a/templates/widgets/agent/modalform.html
+++ b/templates/widgets/agent/modalform.html
@@ -110,7 +110,8 @@
 	}
 </script>
 <p>
-	Parameters required to execute {{agent}}-{{action}}
+	Parameters for <b>{{agent}}-{{action}}</b>.<br>
+	<b>bold</b> parameters are <i>required</i>, all others are optionals.
 </p>
 <div id="emsg">
 	&nbsp;
