--- a/templates/widgets/agent/modalform.html
+++ b/templates/widgets/agent/modalform.html
@@ -77,6 +77,7 @@
 									alert('Request Timeout');
 								}
 					        	$('#modalprogress').dialog('close');
+					        	$(document).scrollTop(0);
 					        }
 				        // do something else
 		    		 	});
