Added dynamic messages subsystem

--- a/templates/widgets/servers/systemstatus.html
+++ b/templates/widgets/servers/systemstatus.html
@@ -51,7 +51,7 @@ table.systemstatus tr.odd {
 			{% for server in servers %}
 			<tr class="{% cycle odd,even %}">
 				<td width="5%"><img src="{{settings.STATIC_URL}}images/icons/{% if server.online %}online.png{% else %}offline.png{% endif %}" style="border: 0px; height: 15px;margin: 3px;float:none;"/></td>
-				<td><a href="{% url serverdetails server.hostname %}">{{server.fqdn}}</a></td>
+				<td><a href="{% url serverdetails server.hostname %}"><b>{{server.fqdn}}</b></a></td>
 				<td>{{server.os}}</td>
 				<td>{{server.architecture}}</td>
 			</tr>
