Implementation of oVirt Plugin

--- a/templates/plugins/ovirt/createvm.html
+++ b/templates/plugins/ovirt/createvm.html
@@ -10,8 +10,12 @@
 </div>
 {% endblock %}
 {% block content %} 
-<div id="execution-dialog"></div>
-<div id="toolbar-response"></div>
+<div id="execution-dialog">
+	
+</div>
+<div id="toolbar-response">
+	
+</div>
 <div class="fg-toolbar">
 	{% if server_operations %}	
 		<ul id="nav">
