--- a/templates/plugins/ovirt/widgets/createwizard.html
+++ b/templates/plugins/ovirt/widgets/createwizard.html
@@ -5,27 +5,157 @@
 
 {% block widget-content %}
 <script>
+
+function update_combo(url, combo_box_id, callback) {
+	var rand_no = Math.ceil(100*Math.random());
+	var spinner_id = "spinner" + rand_no;
+	template_spinner = '<img id="' + spinner_id +'" src="{{settings.STATIC_URL}}images/small-loader.gif">';
+    $(combo_box_id).after(template_spinner);
+    $.getJSON(url, function(j)
+     {
+     	  $("#"+spinner_id).remove();
+          var options = '';
+          for (var i = 0; i < j.length; i++)
+          {
+               options += '<option value="' + j[i].id + '">' + j[i].name + '</option>';
+          }
+          $(combo_box_id).html(options);
+          if (callback) {
+          	callback();
+          }
+     });
+}
+
+$(document).ready(function() {
+
+	$("#createvmwizard").formwizard({ 
+	 	formPluginEnabled: true,
+	 	validationEnabled: true,
+	 	focusFirstInput : true,
+	 	formOptions :{
+			success: function(data){$("#status").fadeTo(500,1,function(){ $(this).html("You are now registered!").fadeTo(5000, 0); })},
+			beforeSubmit: function(data){$("#data").html("data sent to the server: " + $.param(data));},
+			dataType: 'json',
+			resetForm: true
+	 	}
+	}
+   );
+   
+   update_combo("{% url ovirt_get_clusters hostname%}", "#id_base-cluster", 
+   				function() {
+   					update_combo("{% url ovirt_get_templates hostname%}", "#id_base-template");
+   				});
+});
 </script>
 
+<style type="text/css">
+	#fieldWrapper {
+		margin-left: 85px;
+		margin-top: 20px;
+	}
+
+	#wizardNavigation {
+		margin-top : 0.5em;
+		margin-right : 1em;
+		text-align: right;
+		margin-bottom: 20px;
+	}
+	
+	input {
+		margin-right: 0.1em;
+		margin-bottom: 0.5em;
+	}
+
+	.input_field_25em {
+		width: 2.5em;
+	}
+
+	.input_field_3em {
+		width: 3em;
+	}
+
+	.input_field_35em {
+		width: 3.5em;
+	}
+
+	.input_field_12em {
+		width: 12em;
+	}
+
+	label {
+		margin-bottom: 0.2em;
+		font-weight: bold;
+		font-size: 0.8em;
+	}
+
+	label.error {
+		color: red;
+		font-size: 0.8em;
+		margin-left : 0.5em;
+	}
+
+	.step span {
+		float: right;
+		font-weight: bold;
+		padding-right: 0.8em;
+	}
+
+	.navigation_button {
+		width : 70px;
+	}
+	
+	#data {
+			overflow : auto;
+	}
+	
+	.wizardimg {
+		height: 64px;
+		margin-left: -70px;
+		float:left;
+	}
+</style>
 <br/>
-<img src="{{settings.STATIC_URL}}images/icons/server.png" height="64px" style="float:left;"/>
 <form action="" method="post" id="createvmwizard">
 	{% csrf_token %}
-	<fieldset>
+	<div id="fieldWrapper">
+		<div class="step" id="first">
+		<img src="{{settings.STATIC_URL}}images/plugins/ovirt/ovirt.jpeg" class="wizardimg"/>
 		{% for field in base_form %}
-	        <div class="fieldWrapper">
 	            {{ field.errors }}
 	            {% if field.field.required %}
-	            <p><b>{{ field.label_tag }}</b>: {{ field }}</p>
+	            <b>{{ field.label_tag }}</b>: {{ field }}<br/><br/>
 	            {% else %}
-	            <p>{{ field.label_tag }}: {{ field }}</p>
+	            {{ field.label_tag }}: {{ field }}<br/><br/>
 	            {% endif %}
-	        </div>
 	    {% endfor %}
+	    </div>
+	    <div class="step" id="second">
+	    <img src="{{settings.STATIC_URL}}images/plugins/ovirt/storage.png" class="wizardimg"/>
+		{% for field_s in storage_form %}
+	            {{ field_s.errors }}
+	            {% if field_s.field.required %}
+	            <b>{{ field_s.label_tag }}</b>: {{ field_s }}<br/><br/>
+	            {% else %}
+	            {{ field_s.label_tag }}: {{ field_s }}<br/><br/>
+	            {% endif %}
+	    {% endfor %}
+	    </div>
+	    <div class="step submit_step" id="third">
+	   	<img src="{{settings.STATIC_URL}}images/plugins/ovirt/network.png" class="wizardimg"/>
+		{% for field_n in network_form %}
+	            {{ field_n.errors }}
+	            {% if field_n.field.required %}
+	            <b>{{ field_n.label_tag }}</b>: {{ field_n }}<br/><br/>
+	            {% else %}
+	            {{ field_n.label_tag }}: {{ field_n }}<br/><br/>
+	            {% endif %}
+	    {% endfor %}
+	    </div>
 		<br/>
-		<input class="input" type="submit" value="Execute" id="bt"/>
-	</fieldset>
+	</div>
+	<div id="wizardNavigation"> 							
+		<input class="navigation_button" id="back" value="Back" type="reset" />
+		<input class="navigation_button" id="next" value="Next" type="submit" />
+	</div>
 </form>
-{{storage_form}}
-{{network_form}}
 {% endblock %}
