--- a/templates/theme/kermit/base.html
+++ b/templates/theme/kermit/base.html
@@ -47,6 +47,10 @@
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-1.9.1.custom.min.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-hotkeys/jquery.hotkeys.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-form/jquery.form.js"></script>
+    	<script type="text/javascript" src="{{STATIC_URL}}js/jquery-validate/jquery.validate.js"></script>
+    	<script type="text/javascript" src="{{STATIC_URL}}js/bbq/bbq.js"></script>
+    	<script type="text/javascript" src="{{STATIC_URL}}js/jquery-form-wizard/jquery.form.wizard.js"></script>
+		
 		<!-- DynaTree-->
 		<script src="{{STATIC_URL}}js/dynatree/jquery.dynatree.js" type="text/javascript"></script>
 		<!-- JQuery Cookie -->
